--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BoardlyFrontend</title>
+  <title>Boardly</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="/src/styles.css" rel="stylesheet">
 
 </head>
 
